add: swagger api docs for users
